ej/style/main.css
/* ... */
/* mostrar imaghe de perfil del usuario */
.navbar-links-container {
    display: flex;
    position: relative;
}

.navbar-profile {
    display: flex;
    align-items: center;
}

.navbar-profile-image {
    cursor: pointer;
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.navbar-profile-image:hover {
    transform: scale(1.05);
    filter: brightness(1.1);
    transition: 0.2s;
}

.navbar-profile-options {
    max-height: 0px;
    transition: max-height 0.2s ease;
    overflow: hidden;
    position: absolute;
    top: 60px;
    color: black;
    background: white;
    width: 160px;
    z-index: 10;
}

.navbar-profile-option-link {
    width: 100%;
    cursor: pointer;
}

.navbar-profile-option-text {
    padding: 10px;
    width: 100%;
    transition: background 0.2s ease;
}

.navbar-profile-option-text:hover {
    background: #f2f2f2;
}



/* ! Notificación modal de confirmación de cerrar sesión */
.logoutModal {
    display: none; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 10;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%; 
    background-color: rgba(0,0,0,0.4);
}

.logoutModal .logoutModal-content {
    text-align: center;
    background-color: #fefefe;
    margin: auto;
    padding: -10px 0 30px 0;
    border: 1px solid lightgray;
    border-top: 10px solid #58abb7;
    border-radius: 10px;
    width: 60%;
}

.logoutModal .close {
    color: #aaaaaa;
    float: right;
    font-size: 40px;
    font-weight: bold;
    margin: 0 10px 0 10px;
}

.logoutModal .close:hover,
.logoutModal .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
    transform: scale(1.05);
    transition: 0.2s;
}

.logoutModal .logoutModal-body {
    margin: 20px 0 30px 0;
}

.logoutModal .logoutModal-body p {
    font-family: Poppins, sans-serif;
    font-size: 0.8em;
    margin: -10px 0 0 0;
}

.logoutModal .logoutModal-footer {
    margin: 0 0 30px 0;
}

.logoutModal-footer button {
    font-family: Poppins, sans-serif;
    font-size: 0.8em;
    color: rgb(255, 255, 255);
    padding: .6rem 1rem .6rem 1rem;
    border-radius: 8px;
    background-color: rgb(87, 87, 87);
    border: none;
}

.logoutModal-footer button:hover {
    transform: scale(1.05);
    filter: brightness(1.1);
    transition: 0.2s;
}

